--- a/css/style.css
+++ b/css/style.css
@@ -1,123 +1,200 @@
-/*O *{} é o seletor universal e serve para mostrar que vc está aplicando essa regra a todos os elementos no documento.*/
-*{
-margin:0px;
-padding:0px;
-box-sizing: border-box;
-text-decoration: none;
-outline: none;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  text-decoration: none;
+  outline: none;
 }
+
+
+/*COMEÇO PARTE 1*/
 .logotipo {
-    width: 300px;
-    height: 150px;
+  width: 300px;
+  height: 100px;
+}
+
+body {
+  background-color: color #f1f6fc31;
+}
+
+section,footer {
+  padding: 54px 0;
+}
+
+/*INICÍO DA HEADER*/
+header {
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+  
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 30px;
 
   }
   
-
-body{
-    background-color: color #f1f6fc31;
-}
-    section, footer {
-        padding:54px 0;      
-    }  
-h1{
-    font-size:50px;
-    color:white;
-    text-align: center;
-}
-p{
-    color:white;
-    text-align: center;
-}
-.container{
-    max-width:1400;
-    margin:0 auto;
-    padding:0 5%;
-    
+  nav ul {
+    display: flex;
+    align-items: center;
   }
-  .btn{
-    background-color:#0000009c;
-    color:white;
-    padding:10px 20px;
-    border-radius:10px;
-    cursor:pointer;
-    display:inline-black;
-    transition:0.2s;       
+  
+  nav ul a {
+    color: white;
+    margin: 0 25px;
+    text-transform: uppercase;
+    font-size: 16px;
+    display: block;
   }
-  .btn.animate-btn{
-    animation: animate-outline 1s ease-out infinite;
-  }
-  .btn:hover{
-    background-color: #e87c3972;    
-  }
-
-  @keyframes animate-outline {
-    from{
-        outline: 0px solid #f13e0772;
-    }
-    to{
-        outline: 15px solid #ffc08500;
-    }
-  }
-
-header{
-    background-position:center;
-    background-size:cover;
-    background-attachment:fixed;
-    
-         }
-nav{
-display:flex;
-align-items:center;
-justify-content:space-around;
-padding-top:30px;
-
-}
-nav ul {
-    display:flex;
-    align-items:center;   
-    
-}
-nav ul a{
-    color:white;
-    margin:0 25px;
-    text-transform:uppercase;
-    font-size:16px;
-    display:block;
-}
-nav ul a::after{
-    content:"";
+  
+  nav ul a::after {
+    content: "";
     background-color: white;
     height: 3px;
-    width: 0%; 
-    display:block;
-    margin:0 auto;
-    transition:0.3s;
-}
-    nav ul a:hover::after{
-        width: 100%;
-    }
+    width: 0%;
+    display: block;
+    margin: 0 auto;
+    transition: 0.3s;
+  }
+  
+  nav ul a:hover::after {
+    width: 100%;
+  }
+/*FIM DA HEADER*/
 
-.banner{
-    display:flex;
-    justify-content:center;
-    
-    }
-.banner .banner-text{
-margin:150px;
-text-align: center;
-padding:0 90px;
+/*INICÍO DO CONTAINER 1*/
 
+h1 {
+  font-size: 50px;
+  color: white;
+  text-align: center;
 }
-.banner .banner-text h1{
-    font-size: 60px;
-    color: white;
-    
+
+p {
+  color: black;
+  text-align: center;
 }
-.banner .banner-text p{
-    font-size: 25px;
-    color: white;
-    font-weight:lighter;
-    margin:18px 0;
+
+.container1 {
+  max-width: 1400;
+  margin: 0 auto;
+  padding: 0 5%;
 }
-    
-/*background-color:red*/
+
+.btn {
+  background-color: #0000009c;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  display: inline-black;
+  transition: 0.2s;
+}
+
+.btn.animate-btn {
+  animation: animate-outline 1s ease-out infinite;
+}
+
+.btn:hover {
+  background-color: #e87c3972;
+}
+
+@keyframes animate-outline {
+  from {
+    outline: 0px solid #f13e0772;
+  }
+  to {
+    outline: 15px solid #ffc08500;
+  }
+}
+
+.banner {
+  display: flex;
+  justify-content: center; 
+}
+
+.banner .banner-text {
+  margin: 150px;
+  text-align: center;
+  padding: 0 90px;
+}
+
+.banner .banner-text h1 {
+  font-size: 60px;
+  color: white;
+}
+
+.banner .banner-text p {
+  font-size: 25px;
+  color: white;
+  font-weight: lighter;
+  margin: 18px 0;
+}
+/*FIM DO CONTAINER 1*/
+/*FIM PARTE 1*/
+
+
+
+/*COMEÇO PARTE 2*/
+.faca-mais .container {
+  display: flex;
+  align-items: center;
+}
+
+.faca-mais .faca-mais-text {
+  width: 50%;
+  padding: 0 40px;
+}
+
+.faca-mais .faca-mais-text h3 {
+  font-size: 60px;
+}
+
+.faca-mais .faca-mais-text p {
+  margin: 5px 0 10px 0;
+}
+
+.faca-mais .faca-mais-img {
+  width: 50%;
+}
+
+.faca-mais .faca-mais-img img {
+  width: 80%;
+}
+/*FIM PARTE 2*/
+
+
+
+/*COMEÇO PARTE 3*/
+.depoimentos h2 {
+  text-align: center;
+  font-size: 50px;
+}
+
+.depoimentos p {
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 70px;
+}
+
+.cards {
+  display: flex;
+  justify-content: center;
+}
+
+.depoimentos .cards-item {
+  background-color: #d3e6fd;
+  margin: 15px;
+  border-radius: 14px;
+  text-align: center;
+  width: 350px;
+}
+
+.depoimentos .cards-item img {
+  border-radius: 100%;
+  width: 80px;
+  display: block;
+  margin: 10px auto;
+}
